--- a/index.html
+++ b/index.html
@@ -52,29 +52,41 @@
       </ol>
       <div class="carousel-inner" role="listbox">
         <div class="item active">
-          <img class="first-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="First slide">
+          <a href="project1_lambert/cover.html">
+          <div>
+          <img class="first-slide" src="project1_lambert/cover.png" alt="First slide">
+          </div>
           <div class="container">
             <div class="carousel-caption">
-              <h1>Nothing to see!</h1>
+              <h1>Game</h1>
               <p>
-                This website has nothing to see yet, come back later!
+                By Lambert Wang
               </p>
             </div>
           </div>
+          </a>
         </div>
         <div class="item">
-          <img class="second-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Second slide">
+          <a href="project1_joseph/cover.html">
+          <div>
+          <a class="slide-link" href="project1_joseph/cover.html">
+          </div>
+          <img class="second-slide" src="project1_joseph/cover.png" alt="Second slide">
           <div class="container">
             <div class="carousel-caption">
-              <h1>Really</h1>
+              <h1>Game</h1>
               <p>
-                There's nothing here yet.
+                By Joseph Blackman
               </p>
             </div>
           </div>
+          </a>
         </div>
         <div class="item">
+          <a href="project1_lambert/cover.html">
+          <div>
           <img class="third-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Second slide">
+          </div>
           <div class="container">
             <div class="carousel-caption">
               <h1></h1>
@@ -82,6 +94,7 @@
               </p>
             </div>
           </div>
+          </a>
         </div>
       </div>
       <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
@@ -110,7 +123,47 @@
         <h1>Projects</h1>
         <div class="col-md-12">
           <p>
-            No projects completed yet!
+
+      <!-- START THE FEATURETTES -->
+
+      <hr class="featurette-divider">
+
+      <div class="row featurette">
+        <div class="col-md-7">
+          <h2 class="featurette-heading">
+            <a href="project1_lambert/cover.html">
+              Game <span class="text-muted">By Lambert</span>
+            </a>
+          </h2>
+          <p class="lead">
+            Minimum viable product.
+          </p>
+        </div>
+        <div class="col-md-5">
+          <img class="featurette-image-right img-fluid mx-auto" src="project1_lambert/cover.png" alt="Generic placeholder image">
+        </div>
+      </div>
+
+      <hr class="featurette-divider">
+
+      <div class="row featurette">
+        <div class="col-md-5">
+          <img class="featurette-image-left img-fluid mx-auto" src="project1_joseph/cover.png" alt="Generic placeholder image">
+        </div>
+        <div class="col-md-7">
+          <h2 class="featurette-heading">
+            <a href="project1_joseph/cover.html">
+              Game <span class="text-muted">By Joseph</span>
+            </a>
+          </h2>
+          <p class="lead">
+            Insert description here.
+          </p>
+        </div>
+      </div>
+
+      <hr class="featurette-divider">
+
           </p>
         </div>
       </div>
