Fixed the stupid featurette

--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
       </ol>
       <div class="carousel-inner" role="listbox">
         <div class="item active">
-          <a href="project1_lambert/cover.html">
+          <a href="http://users.wpi.edu/~lwang5/imgd3900/project1_lambert/cover.html">
           <div>
-          <img class="first-slide" src="project1_lambert/cover.png" alt="First slide">
+          <img class="first-slide" src="https://users.wpi.edu/~lwang5/imgd3900/project1_lambert/cover.png" alt="First slide">
           </div>
           <div class="container">
             <div class="carousel-caption">
@@ -67,11 +67,10 @@
           </a>
         </div>
         <div class="item">
-          <a href="project1_joseph/cover.html">
+          <a href="http://users.wpi.edu/~lwang5/imgd3900/project1_joseph/cover.html">
           <div>
-          <a class="slide-link" href="project1_joseph/cover.html">
+          <img class="second-slide" src="https://users.wpi.edu/~lwang5/imgd3900/project1_joseph/cover.png" alt="Second slide">
           </div>
-          <img class="second-slide" src="project1_joseph/cover.png" alt="Second slide">
           <div class="container">
             <div class="carousel-caption">
               <h1>Game</h1>
@@ -129,36 +128,26 @@
       <hr class="featurette-divider">
 
       <div class="row featurette">
-        <div class="col-md-7">
-          <h2 class="featurette-heading">
-            <a href="project1_lambert/cover.html">
-              Game <span class="text-muted">By Lambert</span>
-            </a>
-          </h2>
-          <p class="lead">
-            Minimum viable product.
-          </p>
+        <div class="left-featurette">
+        <h2 class="featurette-heading">
+          <a href="http://users.wpi.edu/~lwang5/imgd3900/project1_lambert/cover.html">
+            Game <span class="text-muted">By Lambert</span>
+          </a>
+        </h2>
         </div>
-        <div class="col-md-5">
-          <img class="featurette-image-right img-fluid mx-auto" src="project1_lambert/cover.png" alt="Generic placeholder image">
-        </div>
+        <img class="featurette-image-right img-fluid mx-auto" src="https://users.wpi.edu/~lwang5/imgd3900/project1_lambert/cover.png" alt="Generic placeholder image">
       </div>
 
       <hr class="featurette-divider">
 
       <div class="row featurette">
-        <div class="col-md-5">
-          <img class="featurette-image-left img-fluid mx-auto" src="project1_joseph/cover.png" alt="Generic placeholder image">
-        </div>
-        <div class="col-md-7">
+        <img class="featurette-image-left img-fluid mx-auto" src="https://users.wpi.edu/~lwang5/imgd3900/project1_joseph/cover.png" alt="Generic placeholder image">
+        <div class="col-md-6">
           <h2 class="featurette-heading">
-            <a href="project1_joseph/cover.html">
+            <a href="http://users.wpi.edu/~lwang5/imgd3900/project1_joseph/cover.html">
               Game <span class="text-muted">By Joseph</span>
             </a>
           </h2>
-          <p class="lead">
-            Insert description here.
-          </p>
         </div>
       </div>
 
