--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
                 <li><a href="#about">About</a></li>
-                <li><a href="#about">Projects</a></li>
+                <li><a href="#projects">Projects</a></li>
                 <li><a href="#contact">Contact</a></li>
               </ul>
             </div>
@@ -84,7 +84,7 @@
         <div class="item">
           <a href="project1_lambert/cover.html">
           <div>
-          <img class="third-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Second slide">
+          <img class="third-slide" src="project2/cover.png" alt="Second slide">
           </div>
           <div class="container">
             <div class="carousel-caption">
@@ -117,8 +117,8 @@
         </div>
       </div>
 
-      <!-- About section -->
-      <div class="row" id="about">
+      <!-- Projects section -->
+      <div class="row" id="projects">
         <h1>Projects</h1>
         <div class="col-md-12">
           <p>
@@ -142,13 +142,24 @@
 
       <div class="row featurette">
         <img class="featurette-image-left img-fluid mx-auto" src="https://users.wpi.edu/~lwang5/imgd3900/project1_joseph/cover.png" alt="Generic placeholder image">
-        <div class="col-md-6">
-          <h2 class="featurette-heading">
-            <a href="http://users.wpi.edu/~lwang5/imgd3900/project1_joseph/cover.html">
-              Game <span class="text-muted">By Joseph</span>
-            </a>
-          </h2>
+        <h2 class="featurette-heading">
+          <a href="http://users.wpi.edu/~lwang5/imgd3900/project1_joseph/cover.html">
+            Game <span class="text-muted">By Joseph</span>
+          </a>
+        </h2>
+      </div>
+
+      <hr class="featurette-divider">
+
+      <div class="row featurette">
+        <div class="left-featurette">
+        <h2 class="featurette-heading">
+          <a href="project2/cover.html">
+            Maze <span class="text-muted">Assignment 6</span>
+          </a>
+        </h2>
         </div>
+        <img class="featurette-image-right img-fluid mx-auto" src="project2/cover.png" alt="Generic placeholder image">
       </div>
 
       <hr class="featurette-divider">
