--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
           </a>
         </div>
         <div class="item">
-          <a href="project1_lambert/cover.html">
+          <a href="http://users.wpi.edu/~lwang5/imgd3900/project2/cover.html">
           <div>
           <img class="third-slide" src="project2/cover.png" alt="Second slide">
           </div>
@@ -154,7 +154,7 @@
       <div class="row featurette">
         <div class="left-featurette">
         <h2 class="featurette-heading">
-          <a href="project2/cover.html">
+          <a href="http://users.wpi.edu/~lwang5/imgd3900/project2/cover.html">
             Maze <span class="text-muted">Assignment 6</span>
           </a>
         </h2>
