Added assignment6 presentation

--- a/index.html
+++ b/index.html
@@ -157,6 +157,9 @@
           <a href="http://users.wpi.edu/~lwang5/imgd3900/project2/cover.html">
             Maze <span class="text-muted">Assignment 6</span>
           </a>
+          <a href="http://users.wpi.edu/~lwang5/imgd3900/assignment6.pptx">
+            Presentation
+          </a>
         </h2>
         </div>
         <img class="featurette-image-right img-fluid mx-auto" src="project2/cover.png" alt="Generic placeholder image">
