--- a/index.html
+++ b/index.html
@@ -167,6 +167,20 @@
 
       <hr class="featurette-divider">
 
+      <div class="row featurette">
+        <img class="featurette-image-left img-fluid mx-auto" src="https://users.wpi.edu/~lwang5/imgd3900/project3/cover.png" alt="Generic placeholder image">
+        <h2 class="featurette-heading">
+          <a href="http://users.wpi.edu/~lwang5/imgd3900/project3/cover.html">
+            Assignment 8
+          </a>
+          <a href="http://users.wpi.edu/~lwang5/imgd3900/assignment8.pptx">
+            Presentation
+          </a>
+        </h2>
+      </div>
+
+      <hr class="featurette-divider">
+
           </p>
         </div>
       </div>
