--- a/index.html
+++ b/index.html
@@ -169,12 +169,16 @@
 
       <div class="row featurette">
         <img class="featurette-image-left img-fluid mx-auto" src="https://users.wpi.edu/~lwang5/imgd3900/project3/cover.png" alt="Generic placeholder image">
+        <img class="featurette-image-right img-fluid mx-auto" src="project3/qrcode.png" alt="Generic placeholder image">
         <h2 class="featurette-heading">
           <a href="http://users.wpi.edu/~lwang5/imgd3900/project3/cover.html">
             Assignment 8
           </a>
           <a href="http://users.wpi.edu/~lwang5/imgd3900/assignment8.pptx">
             Presentation
+          </a>
+          <a href="https://goo.gl/forms/tue09FdBugHZUlVG3">
+            Survey
           </a>
         </h2>
       </div>
