--- a/index.html
+++ b/index.html
@@ -181,6 +181,35 @@
                         <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="assignment12/assignment12.pptx">Download</a>
                     </div>
                 </div>
+                <div class="mdl-cell mdl-card mdl-shadow--4dp portfolio-card">
+                    <div class="mdl-card__media">
+                        <img class="article-image" src="assignment15/presentation.png" border="0" alt="">
+                    </div>
+                    <div class="mdl-card__title">
+                        <h2 class="mdl-card__title-text">Assignment 15 Presentation</h2>
+                    </div>
+                    <div class="mdl-card__supporting-text">
+                        We prepared a treatment presentation that briefly describes the storygame we have chosen to build. The game we have chosen to make is "Merlin Saves King Vortigern
+(Working title)". The tagline of our game is "The pool is the emblem of this world, and the tent that of your kingdom."
+                    </div>
+                    <div class="mdl-card__actions mdl-card--border">
+                        <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="assignment15/assignment15.pptx">Download</a>
+                    </div>
+                </div>
+                <div class="mdl-cell mdl-card mdl-shadow--4dp portfolio-card">
+                    <div class="mdl-card__media">
+                        <img class="article-image" src="assignment16/cover.png" border="0" alt="">
+                    </div>
+                    <div class="mdl-card__title">
+                        <h2 class="mdl-card__title-text">Merlin and the Dragons (Prototype)</h2>
+                    </div>
+                    <div class="mdl-card__supporting-text">
+                        Assignment 16. We created a working prototype of the game we described in the treatment created for Assignment 15.
+                    </div>
+                    <div class="mdl-card__actions mdl-card--border">
+                        <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="http://users.wpi.edu/~lwang5/imgd3900/assignment16/cover.html">Play</a>
+                    </div>
+                </div>
             </div>
             <footer class="mdl-mini-footer">
                 <div class="mdl-mini-footer__left-section">
