--- a/index.html
+++ b/index.html
@@ -208,6 +208,7 @@
                     </div>
                     <div class="mdl-card__actions mdl-card--border">
                         <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="http://users.wpi.edu/~lwang5/imgd3900/assignment16/cover.html">Play</a>
+                        <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="https://goo.gl/forms/9VsTMlB3m0v0glK92">Playtest Survey</a>
                     </div>
                 </div>
             </div>
