--- a/index.html
+++ b/index.html
@@ -211,6 +211,20 @@
                         <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="https://goo.gl/forms/9VsTMlB3m0v0glK92">Playtest Survey</a>
                     </div>
                 </div>
+                <div class="mdl-cell mdl-card mdl-shadow--4dp portfolio-card">
+                    <div class="mdl-card__media">
+                        <img class="article-image" src="assignment16/cover.png" border="0" alt="">
+                    </div>
+                    <div class="mdl-card__title">
+                        <h2 class="mdl-card__title-text">Merlin and the Dragons (Prototype v2)</h2>
+                    </div>
+                    <div class="mdl-card__supporting-text">
+                        Assignment 18. We refined our story game we prototyped in Assignment 16 by incorporating the playtest and data analysis feedback we obtained in class.
+                        </div>
+                    <div class="mdl-card__actions mdl-card--border">
+                        <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="http://users.wpi.edu/~lwang5/imgd3900/assignment18/cover.html">Play</a>
+                    </div>
+                </div>
             </div>
             <footer class="mdl-mini-footer">
                 <div class="mdl-mini-footer__left-section">
