--- a/assignment18/game.html
+++ b/assignment18/game.html
@@ -36,7 +36,7 @@ along with Perlenspiel. If not, see <http://www.gnu.org/licenses/>.
 	<link rel="apple-touch-icon-precomposed" href="http://users.wpi.edu/~bmoriarty/ps/icons/apple-touch-icon.png" />
 	<link rel="stylesheet" type="text/css" href="http://users.wpi.edu/~bmoriarty/ps/ps3.2.css" />
 	<script type="text/javascript" src="http://users.wpi.edu/~bmoriarty/aq/aq1.0.js"></script>
-    <script type="text/javascript" src="http://users.wpi.edu/~bmoriarty/ps/k2.0.js"></script>
+	<script type="text/javascript" src="http://users.wpi.edu/~bmoriarty/ps/k2.0.js"></script>
 	<script type="text/javascript" src="http://users.wpi.edu/~bmoriarty/ps/ps3.2.js"></script>
 </head>
 <body onload="PS._sys();">
@@ -46,6 +46,17 @@ along with Perlenspiel. If not, see <http://www.gnu.org/licenses/>.
 	You can also add additional <script> elements if needed. The .js files will be loaded in the order given.
 	Altering this file in any other way can result in breakage, and is a violation of The Rules.
 	-->
-	<script type="text/javascript" src="game.js"></script>
+	<script type="text/javascript" src="GlassForge.js"></script>
+	<script type="text/javascript" src="globals.js"></script>
+	<script type="text/javascript" src="classes/Altar.js"></script>
+	<script type="text/javascript" src="classes/Balloon.js"></script>
+	<script type="text/javascript" src="classes/Bow.js"></script>
+	<script type="text/javascript" src="classes/Box.js"></script>
+	<script type="text/javascript" src="classes/Door.js"></script>
+	<script type="text/javascript" src="classes/DoorPrev.js"></script>
+	<script type="text/javascript" src="classes/Merlin.js"></script>
+	<script type="text/javascript" src="classes/Staff.js"></script>
+	<script type="text/javascript" src="classes/Troll.js"></script>
+	<script type="text/javascript" src="data.js"></script>
 </body>
 </html>
