--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                 </div>
                 <div class="mdl-cell mdl-card mdl-shadow--4dp portfolio-card">
                     <div class="mdl-card__media">
-                        <img class="article-image" src="assignment16/cover.png" border="0" alt="">
+                        <img class="article-image" src="assignment18/cover.png" border="0" alt="">
                     </div>
                     <div class="mdl-card__title">
                         <h2 class="mdl-card__title-text">Merlin and the Dragons (Prototype v2)</h2>
@@ -223,6 +223,20 @@
                         </div>
                     <div class="mdl-card__actions mdl-card--border">
                         <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="http://users.wpi.edu/~lwang5/imgd3900/assignment18/cover.html">Play</a>
+                    </div>
+                </div>
+                <div class="mdl-cell mdl-card mdl-shadow--4dp portfolio-card">
+                    <div class="mdl-card__media">
+                        <img class="article-image" src="assignment19/cover.png" border="0" alt="">
+                    </div>
+                    <div class="mdl-card__title">
+                        <h2 class="mdl-card__title-text">Merlin and the Dragons (Prototype v3)</h2>
+                    </div>
+                    <div class="mdl-card__supporting-text">
+                        Assignment 19. We further refined our story game by incorporating the feedback we obtained during in-class critique. We accomplished four objectives: further refine our story, game, create an updated playtest survey, post our game and survey, and bring our game to class.
+                        </div>
+                    <div class="mdl-card__actions mdl-card--border">
+                        <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="http://users.wpi.edu/~lwang5/imgd3900/assignment19/cover.html">Play</a>
                     </div>
                 </div>
             </div>
