Added entry for engine on index

--- a/index.html
+++ b/index.html
@@ -225,6 +225,22 @@
                         <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="http://users.wpi.edu/~lwang5/imgd3900/assignment18/cover.html">Play</a>
                     </div>
                 </div>
+                
+                <div class="mdl-cell mdl-card mdl-shadow--4dp portfolio-card">
+                    <div class="mdl-card__media">
+                        <img class="article-image" src="images/glassforge.png" border="0" alt="">
+                    </div>
+                    <div class="mdl-card__title">
+                        <h2 class="mdl-card__title-text">GlassForge Engine</h2>
+                    </div>
+                    <div class="mdl-card__supporting-text">
+                        The GlassForge engine is a game engine wrapper for Perlenspiel 3.2. GlassForge is a Object & event driven engine with basic class, event, and level scripting. The engine allows for simple level creation and object loading. It also has performance driven collision and movement simulation. It is built as layer on top of Perlenspiel and utilizes its functions for rendering and input.
+                        </div>
+                    <div class="mdl-card__actions mdl-card--border">
+                        <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="http://github.com/magellantoo/imgd3900_site/blob/master/GlassForge.js">Source</a>
+                    </div>
+                </div>
+
                 <div class="mdl-cell mdl-card mdl-shadow--4dp portfolio-card">
                     <div class="mdl-card__media">
                         <img class="article-image" src="assignment19/cover.png" border="0" alt="">
