--- a/assignment19/game.html
+++ b/assignment19/game.html
@@ -48,17 +48,21 @@ along with Perlenspiel. If not, see <http://www.gnu.org/licenses/>.
 	-->
 	<script type="text/javascript" src="../GlassForge.js"></script>
 	<script type="text/javascript" src="globals.js"></script>
+	<script type="text/javascript" src="classes/creatures/Dragon.js"></script>
+	<script type="text/javascript" src="classes/creatures/Drake.js"></script>
 	<script type="text/javascript" src="classes/creatures/Merlin.js"></script>
 	<script type="text/javascript" src="classes/creatures/Troll.js"></script>
+	<script type="text/javascript" src="classes/creatures/Vortigern.js"></script>
 	<script type="text/javascript" src="classes/tools/Tool.js"></script>
 	<script type="text/javascript" src="classes/tools/Altar.js"></script>
 	<script type="text/javascript" src="classes/tools/Balloon.js"></script>
-	<script type="text/javascript" src="classes/tools/Bow.js"></script>
 	<script type="text/javascript" src="classes/tools/GravityOrb.js"></script>
 	<script type="text/javascript" src="classes/tools/Staff.js"></script>
 	<script type="text/javascript" src="classes/Box.js"></script>
 	<script type="text/javascript" src="classes/Door.js"></script>
 	<script type="text/javascript" src="classes/DoorPrev.js"></script>
+	<script type="text/javascript" src="classes/Plate.js"></script>
+	<script type="text/javascript" src="classes/ToggleBlock.js"></script>
 	<script type="text/javascript" src="data.js"></script>
 </body>
 </html>
