--- a/index.html
+++ b/index.html
@@ -57,6 +57,21 @@
             <div class="mdl-grid portfolio-max-width">
                 <div class="mdl-cell mdl-card mdl-shadow--4dp portfolio-card">
                     <div class="mdl-card__media">
+                        <img class="article-image" src="images/glassforge.png" border="0" alt="">
+                    </div>
+                    <div class="mdl-card__title">
+                        <h2 class="mdl-card__title-text">GlassForge Engine</h2>
+                    </div>
+                    <div class="mdl-card__supporting-text">
+                        The GlassForge engine is a game engine wrapper for Perlenspiel 3.2. GlassForge is a Object & event driven engine with basic class, event, and level scripting. The engine allows for simple level creation and object loading. It also has performance driven collision and movement simulation. It is built as layer on top of Perlenspiel and utilizes its functions for rendering and input.
+                        </div>
+                    <div class="mdl-card__actions mdl-card--border">
+                        <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="http://github.com/magellantoo/imgd3900_site/blob/master/GlassForge.js" target="_blank">Source</a>
+                    </div>
+                </div>
+
+                <div class="mdl-cell mdl-card mdl-shadow--4dp portfolio-card">
+                    <div class="mdl-card__media">
                         <img class="article-image" src="assignment3_joseph/cover.png" border="0" alt="">
                     </div>
                     <div class="mdl-card__title">
@@ -108,7 +123,7 @@
                         We identify our experience goals and describe our strategy for measurably achieving them. We explain how we instrumented the sample game and show graphs (based on actual captured data) of the sample game's baseline (pre-modded) behavior. We show graphs (based on actual captured data) that demonstrate how our mods achieved our experience goals (or failed to do so).
                     </div>
                     <div class="mdl-card__actions mdl-card--border">
-                        <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="assignment6/assignment6.pptx">Download</a>
+                        <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="assignment6/assignment6.pptx" target="_blank">Download</a>
                     </div>
                 </div>
                 <div class="mdl-cell mdl-card mdl-shadow--4dp portfolio-card">
@@ -122,7 +137,7 @@
                         We were tasked with creating a casual, mobile-friendly game with two or more measurable experience goals. Our game must satisfy the following criteria: easy to learn, non-twitch, and playable in short time bursts. We need built-in prompts and/or tutorials that should teach new players how to play. Any instructions provided on the cover image, if any, must be sparse. Players should be able to look away from the game without losing. Most mobile players spend only a few minutes in a single session.
                     </div>
                     <div class="mdl-card__actions mdl-card--border">
-                        <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="assignment8/assignment8.pptx">Download</a>
+                        <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="assignment8/assignment8.pptx" target="_blank">Download</a>
                     </div>
                 </div>
                 <div class="mdl-cell mdl-card mdl-shadow--4dp portfolio-card">
@@ -178,7 +193,7 @@
                         We updated the treatment presentation we created for Assignment 8 to reflect the way our final game actually turned out.
                     </div>
                     <div class="mdl-card__actions mdl-card--border">
-                        <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="assignment12/assignment12.pptx">Download</a>
+                        <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="assignment12/assignment12.pptx" target="_blank">Download</a>
                     </div>
                 </div>
                 <div class="mdl-cell mdl-card mdl-shadow--4dp portfolio-card">
@@ -193,7 +208,7 @@
 (Working title)". The tagline of our game is "The pool is the emblem of this world, and the tent that of your kingdom."
                     </div>
                     <div class="mdl-card__actions mdl-card--border">
-                        <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="assignment15/assignment15.pptx">Download</a>
+                        <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="assignment15/assignment15.pptx" target="_blank">Download</a>
                     </div>
                 </div>
                 <div class="mdl-cell mdl-card mdl-shadow--4dp portfolio-card">
@@ -208,7 +223,7 @@
                     </div>
                     <div class="mdl-card__actions mdl-card--border">
                         <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="http://users.wpi.edu/~lwang5/imgd3900/assignment16/cover.html">Play</a>
-                        <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="https://goo.gl/forms/9VsTMlB3m0v0glK92">Playtest Survey</a>
+                        <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="https://goo.gl/forms/9VsTMlB3m0v0glK92" target="_blank">Playtest Survey</a>
                     </div>
                 </div>
                 <div class="mdl-cell mdl-card mdl-shadow--4dp portfolio-card">
@@ -225,21 +240,6 @@
                         <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="http://users.wpi.edu/~lwang5/imgd3900/assignment18/cover.html">Play</a>
                     </div>
                 </div>
-                
-                <div class="mdl-cell mdl-card mdl-shadow--4dp portfolio-card">
-                    <div class="mdl-card__media">
-                        <img class="article-image" src="images/glassforge.png" border="0" alt="">
-                    </div>
-                    <div class="mdl-card__title">
-                        <h2 class="mdl-card__title-text">GlassForge Engine</h2>
-                    </div>
-                    <div class="mdl-card__supporting-text">
-                        The GlassForge engine is a game engine wrapper for Perlenspiel 3.2. GlassForge is a Object & event driven engine with basic class, event, and level scripting. The engine allows for simple level creation and object loading. It also has performance driven collision and movement simulation. It is built as layer on top of Perlenspiel and utilizes its functions for rendering and input.
-                        </div>
-                    <div class="mdl-card__actions mdl-card--border">
-                        <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="http://github.com/magellantoo/imgd3900_site/blob/master/GlassForge.js">Source</a>
-                    </div>
-                </div>
 
                 <div class="mdl-cell mdl-card mdl-shadow--4dp portfolio-card">
                     <div class="mdl-card__media">
@@ -253,6 +253,7 @@
                         </div>
                     <div class="mdl-card__actions mdl-card--border">
                         <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="http://users.wpi.edu/~lwang5/imgd3900/assignment19/cover.html">Play</a>
+                        <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="https://goo.gl/forms/HjWATVagauiaT4gM2" target="_blank">Playtest Survey</a>
                     </div>
                 </div>
             </div>
