--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                         Assignment 19. We further refined our story game by incorporating the feedback we obtained during in-class critique. We accomplished four objectives: further refine our story, game, create an updated playtest survey, post our game and survey, and bring our game to class.
                         </div>
                     <div class="mdl-card__actions mdl-card--border">
-                        <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="http://users.wpi.edu/~lwang5/imgd3900/assignment19/cover.html">Play</a>
+                        <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="/assignment19/cover.html">Play</a>
                         <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="https://goo.gl/forms/HjWATVagauiaT4gM2" target="_blank">Playtest Survey</a>
                     </div>
                 </div>
@@ -98,7 +98,7 @@
                         Assignment 18. We refined our story game we prototyped in Assignment 16 by incorporating the playtest and data analysis feedback we obtained in class.
                         </div>
                     <div class="mdl-card__actions mdl-card--border">
-                        <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="http://users.wpi.edu/~lwang5/imgd3900/assignment18/cover.html">Play</a>
+                        <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="/assignment18/cover.html">Play</a>
                     </div>
                 </div>
 
@@ -113,7 +113,7 @@
                         Assignment 16. We created a working prototype of the game we described in the treatment created for Assignment 15.
                     </div>
                     <div class="mdl-card__actions mdl-card--border">
-                        <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="http://users.wpi.edu/~lwang5/imgd3900/assignment16/cover.html">Play</a>
+                        <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="/assignment16/cover.html">Play</a>
                         <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="https://goo.gl/forms/9VsTMlB3m0v0glK92" target="_blank">Playtest Survey</a>
                     </div>
                 </div>
@@ -132,7 +132,7 @@
                         Assignment 12. We modified our game to incorporate any suggestions we felt were appropriate and useful. Finally, we applied a layer of polish to our game.
                     </div>
                     <div class="mdl-card__actions mdl-card--border">
-                        <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="http://users.wpi.edu/~lwang5/imgd3900/assignment12/cover.html">Play</a>
+                        <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="/assignment12/cover.html">Play</a>
                     </div>
                 </div>
                 <div class="mdl-cell mdl-card mdl-shadow--4dp portfolio-card">
@@ -146,7 +146,7 @@
                         Assignment 11. We refined the casual game we prototyped in Assignment 9 by incorporating the user feedback and telemetry we collected during in-class playtesting.
                     </div>
                     <div class="mdl-card__actions mdl-card--border">
-                        <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="http://users.wpi.edu/~lwang5/imgd3900/assignment11/cover.html">Play</a>
+                        <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="/assignment11/cover.html">Play</a>
                     </div>
                 </div>
                 <div class="mdl-cell mdl-card mdl-shadow--4dp portfolio-card">
@@ -160,7 +160,7 @@
                         Assignment 9. The prototype of our casual game as we described in Assignment 8. A working prototype of the casual game we described in the treatment created for Assignment 08, incorporating the database functions we will need to record and analyze playtest behavior.
                     </div>
                     <div class="mdl-card__actions mdl-card--border">
-                        <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="http://users.wpi.edu/~lwang5/imgd3900/assignment9/cover.html">Play</a>
+                        <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="/assignment9/cover.html">Play</a>
                     </div>
                 </div>
 
@@ -176,7 +176,7 @@
                         Maze. Assignment 6. This assignment will started us thinking about how to use data analytics to inform our game designs. Additionally it give us our first taste of game instrumentation.
                     </div>
                     <div class="mdl-card__actions mdl-card--border">
-                        <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="http://users.wpi.edu/~lwang5/imgd3900/assignment6/cover.html">Play</a>
+                        <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="/assignment6/cover.html">Play</a>
                     </div>
                 </div>
 
@@ -191,7 +191,7 @@
                         Game by Joseph. Assignment 3. This assignment aquainted Joseph with the skills he needed to start using Perlenspiel.
                     </div>
                     <div class="mdl-card__actions mdl-card--border">
-                        <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="http://users.wpi.edu/~lwang5/imgd3900/assignment3_joseph/cover.html">Play</a>
+                        <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="/assignment3_joseph/cover.html">Play</a>
                     </div>
                 </div>
                 <div class="mdl-cell mdl-card mdl-shadow--4dp portfolio-card">
@@ -205,7 +205,7 @@
                         Game by Lambert. Assignment 3. This assignment will acquainted Lambert with the skills he needed to start using Perlenspiel.
                     </div>
                     <div class="mdl-card__actions mdl-card--border">
-                        <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="http://users.wpi.edu/~lwang5/imgd3900/assignment3_lambert/cover.html">Play</a>
+                        <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="/assignment3_lambert/cover.html">Play</a>
                     </div>
                 </div>
 
