--- a/assignment18/game.html
+++ b/assignment18/game.html
@@ -34,10 +34,10 @@ along with Perlenspiel. If not, see <http://www.gnu.org/licenses/>.
 	<link rel="shortcut icon" href="http://users.wpi.edu/~bmoriarty/ps/icons/favicon.png" />
 	<link rel="apple-touch-icon" href="http://users.wpi.edu/~bmoriarty/ps/icons/apple-touch-icon.png" />
 	<link rel="apple-touch-icon-precomposed" href="http://users.wpi.edu/~bmoriarty/ps/icons/apple-touch-icon.png" />
-	<link rel="stylesheet" type="text/css" href="http://users.wpi.edu/~bmoriarty/ps/ps3.2.css" />
-	<script type="text/javascript" src="http://users.wpi.edu/~bmoriarty/aq/aq1.0.js"></script>
-	<script type="text/javascript" src="http://users.wpi.edu/~bmoriarty/ps/k2.0.js"></script>
-	<script type="text/javascript" src="http://users.wpi.edu/~bmoriarty/ps/ps3.2.js"></script>
+	<link rel="stylesheet" type="text/css" href="https://users.wpi.edu/~bmoriarty/ps/ps3.2.css" />
+	<script type="text/javascript" src="https://users.wpi.edu/~bmoriarty/aq/aq1.0.js"></script>
+	<script type="text/javascript" src="https://users.wpi.edu/~bmoriarty/ps/k2.0.js"></script>
+	<script type="text/javascript" src="https://users.wpi.edu/~bmoriarty/ps/ps3.2.js"></script>
 </head>
 <body onload="PS._sys();">
 	<!--
