--- a/assignment12/cover.html
+++ b/assignment12/cover.html
@@ -34,8 +34,8 @@ along with Perlenspiel. If not, see <http://www.gnu.org/licenses/>.
 	<link rel="shortcut icon" href="http://users.wpi.edu/~bmoriarty/ps/icons/favicon.png" />
 	<link rel="apple-touch-icon" href="http://users.wpi.edu/~bmoriarty/ps/icons/apple-touch-icon.png" />
 	<link rel="apple-touch-icon-precomposed" href="http://users.wpi.edu/~bmoriarty/ps/icons/apple-touch-icon.png" />
-	<link rel="stylesheet" type="text/css" href="http://users.wpi.edu/~bmoriarty/ps/cover3.2.css" />
-	<script type="text/javascript" src="http://users.wpi.edu/~bmoriarty/ps/cover3.2.js"></script>
+	<link rel="stylesheet" type="text/css" href="https://users.wpi.edu/~bmoriarty/ps/cover3.2.css" />
+	<script type="text/javascript" src="https://users.wpi.edu/~bmoriarty/ps/cover3.2.js"></script>
 </head>
 <body onload="init( 0x000, 0xFFFFFF );">
 	<div id="main">
