--- a/index.html
+++ b/index.html
@@ -23,10 +23,11 @@
     <meta name="description" content="A student webpage for IMGD3900.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
     <title>\sum_{n=1}^{12}\phi(n)</title>
+	<link rel="shortcut icon" href="http://users.wpi.edu/~bmoriarty/ps/icons/favicon.png" />
+
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en">
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.grey-pink.min.css" />
     <link rel="stylesheet" href="styles.css" />
-
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
