Final assignment, final commit

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
             <div class="mdl-layout__header-row portfolio-navigation-row mdl-layout--large-screen-only">
                 <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font">
                     <a class="mdl-navigation__link is-active" href="index.html">Portfolio</a>
+                    <a class="mdl-navigation__link" href="#presentations">Presentaitons</a>
                     <a class="mdl-navigation__link" href="about.html">About</a>
                 </nav>
             </div>
@@ -51,6 +52,7 @@
         <div class="mdl-layout__drawer mdl-layout--small-screen-only">
             <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font">
                 <a class="mdl-navigation__link is-active" href="index.html">Portfolio</a>
+                <a class="mdl-navigation__link" href="#presentations">Presentaitons</a>
                 <a class="mdl-navigation__link" href="about.html">About</a>
             </nav>
         </div>
@@ -69,6 +71,21 @@
                         </div>
                     <div class="mdl-card__actions mdl-card--border">
                         <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="http://github.com/magellantoo/imgd3900_site/blob/master/GlassForge.js" target="_blank">Source</a>
+                    </div>
+                </div>
+
+                <div class="mdl-cell mdl-card mdl-shadow--4dp portfolio-card">
+                    <div class="mdl-card__media">
+                        <img class="article-image" src="assignment20/cover.png" border="0" alt="">
+                    </div>
+                    <div class="mdl-card__title">
+                        <h2 class="mdl-card__title-text">Merlin and the Dragons (vFinal)</h2>
+                    </div>
+                    <div class="mdl-card__supporting-text">
+                        Assignment 20. In our last class, our game got plenty of additional playtesting by our classmates, and we gathered telemetry and survey responses to help us assess the progress of our project. We modified our game to incorporate any needed improvements.
+                        </div>
+                    <div class="mdl-card__actions mdl-card--border">
+                        <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="assignment20/cover.html">Play</a>
                     </div>
                 </div>
 
@@ -207,6 +224,23 @@
                     </div>
                     <div class="mdl-card__actions mdl-card--border">
                         <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="assignment3_lambert/cover.html">Play</a>
+                    </div>
+                </div>
+
+
+
+                <div class="mdl-cell mdl-card mdl-shadow--4dp portfolio-card" id="presentations">
+                    <div class="mdl-card__media">
+                        <img class="article-image" src="assignment20/presentation.png" border="0" alt="">
+                    </div>
+                    <div class="mdl-card__title">
+                        <h2 class="mdl-card__title-text">Merlin (vFinal)</h2>
+                    </div>
+                    <div class="mdl-card__supporting-text">
+                        Assignment 20. We completely updated the treatment presentation we created for Assignment 15 to reflect the way our final game actually turned out.
+                    </div>
+                    <div class="mdl-card__actions mdl-card--border">
+                        <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="assignment20/assignment20.pptx" target="_blank">Download</a>
                     </div>
                 </div>
 
