--- a/about.html
+++ b/about.html
@@ -41,6 +41,7 @@
             <div class="mdl-layout__header-row portfolio-navigation-row mdl-layout--large-screen-only">
                 <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font">
                     <a class="mdl-navigation__link" href="index.html">Portfolio</a>
+                    <a class="mdl-navigation__link" href="index.html#presentations">Presentaitons</a>
                     <a class="mdl-navigation__link is-active" href="about.html">About</a>
                 </nav>
             </div>
@@ -48,6 +49,7 @@
         <div class="mdl-layout__drawer mdl-layout--small-screen-only">
             <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font">
                 <a class="mdl-navigation__link is-active" href="index.html">Portfolio</a>
+                <a class="mdl-navigation__link" href="index.html#presentations">Presentaitons</a>
                 <a class="mdl-navigation__link" href="about.html">About</a>
             </nav>
         </div>
